bdr.BDR.scala.error
Compilation error:
BDR:5: error: type mismatch;
 found   : String
 required: Char
  x=readMessage();
               ^